--- a/templates/index.html
+++ b/templates/index.html
@@ -12,38 +12,38 @@
 </head>
 <body>
     <div class='container'>
-        <div class='jumbotron text-center'>
+        <div class='jumbotron text-center' style='background-color: #99857A'>
             <h1>Mission to Mars</h1>
-            <p><a class='btn btn-primary btn-lg' href='/scrape'
+            <p><a class='btn btn-primary btn-lg' style='background-color: #FF9D6F' href='/scrape'
                     role='button'>Scrape New Data</a></p>
             <!-- Mars News -->
-            <div class='row' id='mars-news'>
+            <div class='row' id='mars-news' style='background-color: #C67B5C'>
                 <div class='col-md-12'>
                     <div class='media'>
                         <div class='media-body'>
                             <h2>Latest Mars News</h2>
-                            <h4 class='media-heading'>{{mars.news_title}}</h4>
+                            <h3 class='media-heading'>{{mars.news_title}}</h4>
                             <p>{{mars.news_paragraph}}</p>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- Featured Image -->
-            <div class='row' id='mars-featured-image'>
+            <div class='row' id='mars-featured-image' style='background-color: #ad6242'>
                 <div class='col-md-8'>
                     <h2>Featured Mars Image</h2>
                     <img src='{{ mars.featured_image }}' class='img-responsive' alt='Responsive image'>
                 </div>
                 <!-- Mars Facts -->
                 <div class='col-md-4'>
-                    <div class='row' id='mars-facts'>
+                    <div class='row' id='mars-facts' style='padding-right: 3%;'>
                         <h4>Mars Facts</h4>
                         {{ mars.facts | safe}}
                     </div>
                 </div>
             </div>
             <!-- Mars Hemisphere Images -->
-            <div class='row' id='mars-news'>
+            <div class='row' id='mars-news' style='background-color: #663926'>
                 <div class='col-md-12'>
                     <div class='card'>
                         <div class='card-header'>
